# library-management

./: .gitignore  LICENSE  README-en.md  README.md  pyproject.toml  requirements.txt
src/library_management/: __main__.py  book.py  cli.py  data.py  hooks.py  library.py  user.py
src/library_management/commands/: book.py  user.py
