[project]
name = "library-management"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
authors = [
  { name = "kodiitulip", email = "kodii.tulip@gmail.com" },
  { name = "eduardahey", email = "madu.cavalcante.santos@gmail.com" },
]
requires-python = ">=3.12"
dependencies = ["rich>=14.0.0", "typer>=0.16.0"]

[project.scripts]
library = "library_management.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
